--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -26,4 +26,4 @@ jobs:
         
     - name: Test with pytest
       run: |
-        pytest -p no:warnings test_main.py
+        pytest -p no:warnings app/backend/test_main.py
